[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "binja-scumm6"
version = "0.1.0"
description = "Binary Ninja SCUMM6 architecture plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaitaistruct",
    "plumbum",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["binja_helpers"]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
extend-exclude = ["scummvm-tools", "scripts/run_pytest_direct.py", "scripts/run_pytest.py"]
